--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: "java"
 apply plugin: "application"
 
+sourceCompatibility = 9
+targetCompatibility = 9
+
 mainClassName = "jp.gr.java_conf.star_diopside.sound.App"
 
 repositories {
