JDK10を使用した場合のビルドエラー対応

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ subprojects {
         jaadVersion = "0.8.5"
     }
 
+    ext["lombok.version"] = "1.16.22"
+
     apply plugin: "java-library"
     apply plugin: "io.spring.dependency-management"
 
