--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,13 @@
 plugins {
-    id "org.springframework.boot" version "2.0.3.RELEASE"
+    id "org.springframework.boot" version "2.0.6.RELEASE"
+    id "com.google.osdetector" version "1.4.0"
+    //id "com.google.osdetector" version "1.6.0"
 }
 
 subprojects {
     ext {
+        javafxVersion = "11"
+        controlsfxVersion = "9.0.0"
         mp3spiVersion = "1.9.5.4"
         jaadVersion = "0.8.5"
     }
@@ -37,12 +41,23 @@ project(":sound-service") {
 
 project(":sound-app") {
     apply plugin: "org.springframework.boot"
+    apply plugin: "com.google.osdetector"
+
+    ext.platform = osdetector.os == "osx" ? "mac" : osdetector.os == "windows" ? "win" : osdetector.os
 
     dependencies {
         implementation project(":sound-service")
-        implementation "org.controlsfx:controlsfx:9.0.0"
+        implementation "org.openjfx:javafx-base:${javafxVersion}:${platform}"
+        implementation "org.openjfx:javafx-graphics:${javafxVersion}:${platform}"
+        implementation "org.openjfx:javafx-controls:${javafxVersion}:${platform}"
+        implementation "org.openjfx:javafx-fxml:${javafxVersion}:${platform}"
+        implementation "org.controlsfx:controlsfx:${controlsfxVersion}"
         runtimeOnly "com.googlecode.soundlibs:mp3spi:${mp3spiVersion}"
         runtimeOnly "net.sourceforge.jaadec:jaad:${jaadVersion}"
+    }
+
+    bootJar {
+        classifier = "${platform}"
     }
 }
 
