--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id "org.springframework.boot" version "2.3.1.RELEASE" apply false
+    id "org.javamodularity.moduleplugin" version "1.7.0" apply false
     id "org.openjfx.javafxplugin" version "0.0.9" apply false
     id "com.github.spotbugs" version "4.4.4"
 }
@@ -14,6 +15,7 @@ subprojects {
     }
 
     apply plugin: "java-library"
+    apply plugin: "org.javamodularity.moduleplugin"
     apply plugin: "io.spring.dependency-management"
     apply plugin: "checkstyle"
     apply plugin: "com.github.spotbugs"
@@ -46,6 +48,10 @@ subprojects {
         toolVersion = "8.34"
         configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
         ignoreFailures = true
+    }
+
+    tasks.withType(Checkstyle) {
+        exclude "**/module-info.java"
     }
 
     spotbugs {
