--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,9 @@ project(":sound-service") {
 }
 
 project(":sound-console") {
-    apply plugin: "org.springframework.boot"
+    apply plugin: "application"
+
+    mainClassName = "jp.gr.java_conf.stardiopside.sound.Console"
 
     dependencies {
         implementation project(":sound-service")
@@ -83,9 +85,23 @@ project(":sound-console") {
     }
 }
 
-project(":sound-app") {
+project(":sound-console-boot") {
     apply plugin: "org.springframework.boot"
+
+    bootJar {
+        mainClassName = "jp.gr.java_conf.stardiopside.sound.Console"
+    }
+
+    dependencies {
+        runtimeOnly project(":sound-console")
+    }
+}
+
+project(":sound-app") {
     apply plugin: "org.openjfx.javafxplugin"
+    apply plugin: "application"
+
+    mainClassName = "jp.gr.java_conf.stardiopside.sound.App"
 
     javafx {
         version = javafxVersion
@@ -97,5 +113,17 @@ project(":sound-app") {
         implementation "org.controlsfx:controlsfx:${controlsfxVersion}"
         runtimeOnly "com.googlecode.soundlibs:mp3spi:${mp3spiVersion}"
         runtimeOnly "net.sourceforge.jaadec:jaad:${jaadVersion}"
+    }
+}
+
+project(":sound-app-boot") {
+    apply plugin: "org.springframework.boot"
+
+    bootJar {
+        mainClassName = "jp.gr.java_conf.stardiopside.sound.App"
+    }
+
+    dependencies {
+        runtimeOnly project(":sound-app")
     }
 }
