ビルドスクリプトの修正

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ subprojects {
     dependencies {
         compileOnly "org.projectlombok:lombok"
         annotationProcessor "org.projectlombok:lombok"
+        testCompileOnly "org.projectlombok:lombok"
+        testAnnotationProcessor "org.projectlombok:lombok"
     }
 
     tasks.withType(JavaCompile) {
