--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,6 @@ include ":sound-console"
 include ":sound-console-boot"
 include ":sound-app"
 include ":sound-app-boot"
+include ":sound-checker"
+include ":sound-checker-boot"
 include ":sound-util"
