--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,4 @@ include ":sound-app-boot"
 include ":sound-checker"
 include ":sound-checker-boot"
 include ":sound-util"
+include ":sound-compatibility"
