--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ subprojects {
     apply plugin: "com.github.spotbugs"
 
     repositories {
-        jcenter()
+        mavenCentral()
     }
 
     dependencyManagement {
@@ -25,7 +25,6 @@ subprojects {
         dependencies {
             dependency "org.controlsfx:controlsfx:11.1.0"
             dependency "org:jaudiotagger:2.0.3"
-            dependency "net.sourceforge.jaadec:jaad:0.8.5"
             dependency "com.googlecode.soundlibs:mp3spi:1.9.5.4"
         }
     }
@@ -87,7 +86,7 @@ project(":sound-console") {
     dependencies {
         implementation project(":sound-service")
         implementation project(":sound-util")
-        runtimeOnly "net.sourceforge.jaadec:jaad"
+        runtimeOnly files("${rootDir}/libs/jaad-0.8.4.jar")
         runtimeOnly "com.googlecode.soundlibs:mp3spi"
     }
 }
@@ -121,7 +120,7 @@ project(":sound-app") {
     dependencies {
         implementation project(":sound-service")
         implementation "org.controlsfx:controlsfx"
-        runtimeOnly "net.sourceforge.jaadec:jaad"
+        runtimeOnly files("${rootDir}/libs/jaad-0.8.4.jar")
         runtimeOnly "com.googlecode.soundlibs:mp3spi"
     }
 }
@@ -156,7 +155,7 @@ project(":sound-checker") {
         implementation project(":sound-service")
         implementation project(":sound-util")
         implementation "org.controlsfx:controlsfx"
-        runtimeOnly "net.sourceforge.jaadec:jaad"
+        runtimeOnly files("${rootDir}/libs/jaad-0.8.4.jar")
         runtimeOnly "com.googlecode.soundlibs:mp3spi"
     }
 }
