--- a/sound-app/src/main/resources/config/application.yml
+++ b/sound-app/src/main/resources/config/application.yml
@@ -3,8 +3,10 @@ spring:
     banner-mode: 'off'
   aop:
     proxy-target-class: false
-
+---
 logging:
+  charset:
+    console: ${native.encoding:${file.encoding}}
   level:
     root: 'WARN'
     jp.gr.java_conf.stardiopside.sound: 'INFO'
