--- a/sound-console/src/main/resources/config/application.yml
+++ b/sound-console/src/main/resources/config/application.yml
@@ -3,3 +3,7 @@ spring:
     banner-mode: 'off'
   aop:
     proxy-target-class: false
+---
+logging:
+  charset:
+    console: ${native.encoding:${file.encoding}}
